log/build_2022-04-23_16-32-08/cv_basics/stderr.log
  File "/home/sadurac/dev_ws/install/cv_basics/lib/python3.8/site-packages/cv_basics/webcam_sub.py", line 104
    for output in outputs
                        ^
SyntaxError: invalid syntax

